--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,31 @@
+header, footer {
+    background: white;
+    border-width: 40px;
+    margin: 2%;
+    padding: 5px;
+    width: 40%;
+    text-align: center;
+}
 
 
+.li{
 
+}
 
+textarea {
+    background-color: rgb(155, 149, 149);
+    border: thick double #32a1ce;
+    margin: 60px 60px;
+    padding: 20;
+    text-align: center;
+}
 
+button {
+    background-color: green;
+    border: thick double #32a1ce;
+    margin: 60px 60px;
+    padding: 0;
+}
 
 
 
