--- a/src/style.css
+++ b/src/style.css
@@ -6,21 +6,21 @@ header {
   font-family: Arial; 
 }
 
+
 ul {
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    grid-row-gap: 20px;
+        
 }
 
-ul li{
+ul li {
     list-style-type: none;
     border: 1px solid black;
     border-radius: 5px; 
     padding: 5px;
     font-family: Arial;
-    font-size: 14px; 
-       
-
+    font-size: 14px;
 }
 
 .word-count, .nuber-count {
@@ -59,6 +59,7 @@ textarea:hover {
 footer {
     text-align: right;
     font-family: Verdana;
+    padding: 20px;
 }
 
 
