--- a/src/style.css
+++ b/src/style.css
@@ -6,18 +6,16 @@ header {
   font-family: Arial; 
 }
 
-ul {
-    display: inline;
-}
-
 .contador {
     list-style-type: none;
     border: 2px solid #888b8c;
     border-radius: 5px; 
     font-family: Arial;
     font-size: 12px;
-    width: 100px;
-    height: 50px;
+    margin: 10px;
+    letter-spacing: 8px;
+   
+
 }
 
 textarea[name="user-input"] {
