--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,13 @@
   text-align: center;
 }
 
+body {
+  background: url('assets/images.jpeg') top center/cover;
+}
+
 header {
   font-family: Arial;
+  color:#6c6e6f;
 }
 
 .contador {
@@ -13,14 +18,17 @@ header {
   font-family: Arial;
   font-size: 12px;
   margin: 10px;
-  letter-spacing: 8px;
+  letter-spacing: 2px;
   display: inline-block;
   padding: 1%;
+  background-color: rgb(223, 156, 224);
+  color: white;
+  border-radius: 10px;
 
 }
 
 textarea[name="user-input"] {
-  background-color: white;
+  background-color: rgb(245, 243, 243);
   border-color: #6c6e6f;
   margin: 60px 60px;
   width: 500px;
@@ -35,12 +43,13 @@ textarea:hover {
 }
 
 #reset-button {
-  background-color: hsl(150, 48%, 48%);
+  background-color: hsl(308, 68%, 53%);
   width: 200px;
   height: 50px;
   border: none;
   color: white;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 
@@ -48,4 +57,5 @@ footer {
   text-align: right;
   font-family: Verdana;
   padding: 20px;
+  color:#6c6e6f;
 }
